Use some new Java 21 features (#695)