@@ -263,7 +263,7 @@ public class VectorTile {
             lineStrings.add(gf.createLineString(coordSeq));
           }
           if (lineStrings.size() == 1) {
-            geometry = lineStrings.get(0);
+            geometry = lineStrings.getFirst();
           } else if (lineStrings.size() > 1) {
             geometry = gf.createMultiLineString(lineStrings.toArray(new LineString[0]));
           }
@@ -305,12 +305,12 @@ public class VectorTile {
           }
           List<Polygon> polygons = new ArrayList<>();
           for (List<LinearRing> rings : polygonRings) {
-            LinearRing shell = rings.get(0);
+            LinearRing shell = rings.getFirst();
             LinearRing[] holes = rings.subList(1, rings.size()).toArray(new LinearRing[rings.size() - 1]);
             polygons.add(gf.createPolygon(shell, holes));
           }
           if (polygons.size() == 1) {
-            geometry = polygons.get(0);
+            geometry = polygons.getFirst();
           }
           if (polygons.size() > 1) {
             geometry = gf.createMultiPolygon(GeometryFactory.toPolygonArray(polygons));
@@ -376,7 +376,7 @@ public class VectorTile {
 
         for (VectorTileProto.Tile.Feature feature : layer.getFeaturesList()) {
           int tagsCount = feature.getTagsCount();
-          Map<String, Object> attrs = new HashMap<>(tagsCount / 2);
+          Map<String, Object> attrs = HashMap.newHashMap(tagsCount / 2);
           int tagIdx = 0;
           while (tagIdx < feature.getTagsCount()) {
             String key = keys.get(feature.getTags(tagIdx++));
@@ -509,20 +509,14 @@ public class VectorTile {
 
       for (Object value : layer.values()) {
         VectorTileProto.Tile.Value.Builder tileValue = VectorTileProto.Tile.Value.newBuilder();
-        if (value instanceof String stringValue) {
-          tileValue.setStringValue(stringValue);
-        } else if (value instanceof Integer intValue) {
-          tileValue.setSintValue(intValue);
-        } else if (value instanceof Long longValue) {
-          tileValue.setSintValue(longValue);
-        } else if (value instanceof Float floatValue) {
-          tileValue.setFloatValue(floatValue);
-        } else if (value instanceof Double doubleValue) {
-          tileValue.setDoubleValue(doubleValue);
-        } else if (value instanceof Boolean booleanValue) {
-          tileValue.setBoolValue(booleanValue);
-        } else {
-          tileValue.setStringValue(value.toString());
+        switch (value) {
+          case String stringValue -> tileValue.setStringValue(stringValue);
+          case Integer intValue -> tileValue.setSintValue(intValue);
+          case Long longValue -> tileValue.setSintValue(longValue);
+          case Float floatValue -> tileValue.setFloatValue(floatValue);
+          case Double doubleValue -> tileValue.setDoubleValue(doubleValue);
+          case Boolean booleanValue -> tileValue.setBoolValue(booleanValue);
+          case Object other -> tileValue.setStringValue(other.toString());
         }
         tileLayer.addValues(tileValue.build());
       }
@@ -1072,31 +1066,32 @@ public class VectorTile {
     }
 
     void accept(Geometry geometry) {
-      if (geometry instanceof MultiLineString multiLineString) {
-        for (int i = 0; i < multiLineString.getNumGeometries(); i++) {
-          encode(((LineString) multiLineString.getGeometryN(i)).getCoordinateSequence(), false, GeometryType.LINE);
+      switch (geometry) {
+        case MultiLineString multiLineString -> {
+          for (int i = 0; i < multiLineString.getNumGeometries(); i++) {
+            encode(((LineString) multiLineString.getGeometryN(i)).getCoordinateSequence(), false, GeometryType.LINE);
+          }
         }
-      } else if (geometry instanceof Polygon polygon) {
-        LineString exteriorRing = polygon.getExteriorRing();
-        encode(exteriorRing.getCoordinateSequence(), true, GeometryType.POLYGON);
-
-        for (int i = 0; i < polygon.getNumInteriorRing(); i++) {
-          LineString interiorRing = polygon.getInteriorRingN(i);
-          encode(interiorRing.getCoordinateSequence(), true, GeometryType.LINE);
+        case Polygon polygon -> {
+          LineString exteriorRing = polygon.getExteriorRing();
+          encode(exteriorRing.getCoordinateSequence(), true, GeometryType.POLYGON);
+          for (int i = 0; i < polygon.getNumInteriorRing(); i++) {
+            LineString interiorRing = polygon.getInteriorRingN(i);
+            encode(interiorRing.getCoordinateSequence(), true, GeometryType.LINE);
+          }
         }
-      } else if (geometry instanceof MultiPolygon multiPolygon) {
-        for (int i = 0; i < multiPolygon.getNumGeometries(); i++) {
-          accept(multiPolygon.getGeometryN(i));
+        case MultiPolygon multiPolygon -> {
+          for (int i = 0; i < multiPolygon.getNumGeometries(); i++) {
+            accept(multiPolygon.getGeometryN(i));
+          }
         }
-      } else if (geometry instanceof LineString lineString) {
-        encode(lineString.getCoordinateSequence(), shouldClosePath(geometry), GeometryType.LINE);
-      } else if (geometry instanceof Point point) {
-        encode(point.getCoordinateSequence(), false, GeometryType.POINT);
-      } else if (geometry instanceof Puntal) {
-        encode(new CoordinateArraySequence(geometry.getCoordinates()), shouldClosePath(geometry),
+        case LineString lineString ->
+          encode(lineString.getCoordinateSequence(), shouldClosePath(geometry), GeometryType.LINE);
+        case Point point -> encode(point.getCoordinateSequence(), false, GeometryType.POINT);
+        case Puntal ignored -> encode(new CoordinateArraySequence(geometry.getCoordinates()), shouldClosePath(geometry),
           geometry instanceof MultiPoint, GeometryType.POINT);
-      } else {
-        LOGGER.warn("Unrecognized geometry type: " + geometry.getGeometryType());
+        case null -> LOGGER.warn("Null geometry type");
+        default -> LOGGER.warn("Unrecognized geometry type: " + geometry.getGeometryType());
       }
     }
 
